# 42sh

./: .gitignore  CMakeLists.txt  Readme.md  run.sh
src/history/: init_history.c
